--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width initial-scale=1" />
     <title>Code Chrysalis</title>
   </head>
 
@@ -13,6 +13,7 @@
       <input type="text" id="name" placeholder="Engineering?" />
       <input type="submit" />
     </form>
+    <div class="container"></div>
     <!--
     Where is this public/bundle.js file coming from?
     It comes from our trusty friend, webpack.
