index page now shows iteration steps of sorting

--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
 
   <body>
     <div id="title"></div>
-    <input type="text" id="array" placeholder="6,2,5,7,3,9...." />
-    <button class="submit-button">Submit</button>
     <div class="card-container">
       <div class="parent">
         <div class="card">
           <h3>Welcome to Insertion Sort!</h3>
-          <p>Input some numbers in the box above to get sorting!</p>
-          <p>Be sure to separate by commas.</p>
+          <p>Press the mysterious button for a demonstration.</p>
+          <button id="submit-button">Sort!</button>
         </div>
-        <div class="wrapper"></div>
       </div>
     </div>
+    <div class="wrapper"></div>
     <!--
     Where is this public/bundle.js file coming from?
     It comes from our trusty friend, webpack.
